# IntelliSearch

./: .gitignore  .gitmodules  CLAUDE.md  README.md  README_ZH.md  cli.py  config.example.json  pyproject.toml  setup.sh
agents/: mcp_agent.py
backend/: README.md  cli.py  cli_v2.py  eval_model.py  main_fastapi.py
backend/api/: chat_api.py
backend/core/: llm_client.py  mcp_client.py
backend/tool_backend/: ipython_service.py  rag_service.py  run.py  sai_update.py
config/: benchmark_config.yaml  config.example.yaml  config.yaml  config_loader.py
core/: factory.py  logger.py  tool_hash.py
crawling/: README.md  crawl.py  wechat_crawler.py
docs/: DEV_SETUP.md  RAG_SERVER_DOCS.md  README.md
docs/jiaoxiaoAI_wangye/: app.js  index.html  styles.css
docs/js/: app.js  config.js
frontend/: app.py
frontend/flask/: README.md  app.py  requirements.txt
frontend/templates/: base.html  error.html  mobile_chat.html
mcp_server/amap_mcp_server/: server.py
mcp_server/base_toolkit/: server.py
mcp_server/github_code_search/: server.py
mcp_server/local_sai_search/: rag_service.py  server_test.py  server_v2.py
mcp_server/local_sai_search_memos/: test_memory.py  update_memory.py
mcp_server/operate_browser/: server.py
mcp_server/operate_file/: OPERATE_FILE_MCP.md  list_ops.py  manage_ops.py  permissions.example.json  read_ops.py  security.py  server.py  write_ops.py
mcp_server/operate_python/: server.py
mcp_server/operate_terminal/: server.py
mcp_server/python_executor/: README.md  debug_test.py  ipython_backend.py  quick_test.py  server_v2.py  test_ipython_backend.py
mcp_server/search_bilibili/: bcut_asr.py  server.py
mcp_server/search_geo/: server.py
mcp_server/search_local/: server.py
mcp_server/search_movie/: server.py
mcp_server/search_sai/: server.py
mcp_server/search_scholar/: server.py
mcp_server/search_train/: api_client.py  server.py  utils.py
mcp_server/search_web/: server.py
mcp_server/search_wechat/: server.py
memory/: __init__.py  base.py  sequential.py
prompts/: base_system_prompt.md  sys_zh.md
scripts/: backend.sh  start_backend.py  stop_services.sh
spec/: task_2.md
test/: README.md  quick_test.py  run_tests.sh  test_backend_api.py  test_mcp_tool.py  test_rag_service.py  test_sai_memos.py
test/test_mcp_params/: base_toolkit.json  search_scholar.json  search_train.json
tools/: connector.py  mcp_base.py  server_manager.py  tool_cache.py
ui/: loading_messages.py  permission_ui.py  status_manager.py
utils/: log_config.py
(+29 files in other folders)
